--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tekcapsule</groupId>
-    <artifactId>product-application</artifactId>
+    <artifactId>marketplace-application</artifactId>
     <version>1.2.5</version>
     <packaging>pom</packaging>
     <name>Marketplace Application</name>
@@ -29,9 +29,9 @@
     </build>
     <distributionManagement>
         <repository>
-            <id>product</id>
+            <id>marketplace</id>
             <name>GitHub TekCapsule Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/tekcapsule/product-service</url>
+            <url>https://maven.pkg.github.com/tekcapsule/marketplace-service</url>
         </repository>
     </distributionManagement>
 </project>
